--- a/index.html
+++ b/index.html
@@ -1,35 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="notranslate" translate="no">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./src/css/index.css">
-    <title>** Pepino Escape **</title>
+    <meta name="google" content="notranslate" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+    <link rel="icon" href="/public/favicon.ico">
+    <title>Pepino Escape</title>
   </head>
   <body>
+    <div id="app"></div>
 
-    <div id="settings">
-      <h2 id="music">Sound On</h2>
-      <audio id="audio_element" src="./sound/main_theme.mp3"></audio>
-    </div>
-
-    <div id="score_container">
-      <h3>TOP 10</h3>
-      <ul id="score_board"></ul>
-    </div>
-
-    <section id="content">
-    </section>
-    
-    <div id="loading" style="display:none;">LOADING...</div>
-    <script src="./src/javascript/preload.js"></script>
-    <script src="./src/javascript/Player.js"></script>
-    <script src="./src/javascript/Prop.js"></script>
-    <script src="./src/javascript/Obstacle.js"></script>
-    <script src="./src/javascript/Tunacan.js"></script>
-    <script src="./src/javascript/Game.js"></script>
-    <script src="./src/javascript/Scores.js"></script>
-    <script src="./src/javascript/Main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
